@@ -3,6 +3,14 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-10-31
+	- Fixed 17: example still data included.
+	  The general behavior was that resetting to original values was incorrect.
+	  Now, an OntologyInfo object two maps, one for the original values, and the
+	  other for new values (assignied during the editing session, either manually
+	  or by running the "example" actions).
+
+
 2008-10-30
 	- UploadServlet: use File.createTempFile with sessionId; the previous scheme
 	  was buggy!
